feat: add step to check if gh-pages exist

--- a/.github/workflows/render-publish-ghpages.yml
+++ b/.github/workflows/render-publish-ghpages.yml
@@ -52,6 +52,19 @@ jobs:
         with:
           cache-version: 1
 
+      - name: Ensure gh-pages branch exists
+        run: |
+          if ! git ls-remote --exit-code --heads origin gh-pages; then
+            git checkout --orphan gh-pages
+            git rm -rf .
+            touch .nojekyll
+            git add .nojekyll
+            git commit -m "Initialize gh-pages branch"
+            git push origin gh-pages
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
