--- a/.github/workflows/render-publish-ghpages.yml
+++ b/.github/workflows/render-publish-ghpages.yml
@@ -52,6 +52,11 @@ jobs:
         with:
           cache-version: 1
 
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+    
       - name: Ensure gh-pages branch exists
         run: |
           if ! git ls-remote --exit-code --heads origin gh-pages; then
