--- a/.github/workflows/render-publish-ghpages.yml
+++ b/.github/workflows/render-publish-ghpages.yml
@@ -1,5 +1,9 @@
 name: Quarto Render and Publish
 
+permissions:
+    contents: write
+    pages: write
+
 on:
   workflow_call:
     inputs:
@@ -26,8 +30,6 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
