--- a/.github/workflows/render-publish-ghpages.yml
+++ b/.github/workflows/render-publish-ghpages.yml
@@ -76,6 +76,6 @@ jobs:
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
-          path: content
+          path: "."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
